style(footer): fix menu alignment and remove debugging background colors

--- a/src/components/Footer/components/FooterMenu/footer-menu.module.less
+++ b/src/components/Footer/components/FooterMenu/footer-menu.module.less
@@ -1,11 +1,10 @@
 .container {
-  background-color: salmon;
+  // background-color: salmon;
 
-  margin: 0;
+  margin: 24px 400px 0;
   display: flex;
   flex-grow: 2;
   justify-content: space-around;
-  align-items: center;
 
   li {
     list-style-type: none;
@@ -17,11 +16,11 @@
       text-align: center;
 
       > .main {
-        border: 1px solid green;
+        // border: 1px solid green;
       }
 
       > .sub {
-        border: 1px solid purple;
+        // border: 1px solid purple;
         text-transform: capitalize;
         font-size: 10px;
       }
